*Rails 3.2.0 (unreleased)*

* The definition of blank string for Ruby 1.9 has been extended to Unicode whitespace.
Also, in 1.8 the ideographic space U+3000 is considered to be whitespace. [Akira Matsuda, Damien Mathieu]

* The inflector understands acronyms. [dlee]

* Deprecated ActiveSupport::Memoizable in favor of Ruby memoization pattern [José Valim] 

* Added Time#all_day/week/quarter/year as a way of generating ranges (example: Event.where(created_at: Time.now.all_week)) [DHH]

* Added instance_accessor: false as an option to Class#cattr_accessor and friends [DHH]

* Removed ActiveSupport::SecureRandom in favor of SecureRandom from the standard library [Jon Leighton]

* ActiveSupport::OrderedHash now has different behavior for #each and
#each_pair when given a block accepting its parameters with a splat. [Andrew Radev]

*Rails 3.1.0 (unreleased)*

* ActiveSupport::Dependencies now raises NameError if it finds an existing constant in load_missing_constant. This better reflects the nature of the error which is usually caused by calling constantize on a nested constant. [Andrew White]

* Deprecated ActiveSupport::SecureRandom in favour of SecureRandom from the standard library [Jon Leighton]

* New reporting method Kernel#quietly. [fxn]

* Add String#inquiry as a convenience method for turning a string into a StringInquirer object [DHH]

* Add Object#in? to test if an object is included in another object [Prem Sichanugrist, Brian Morearty, John Reitano]

* LocalCache strategy is now a real middleware class, not an anonymous class
posing for pictures.

* ActiveSupport::Dependencies::ClassCache class has been introduced for
holding references to reloadable classes.

* ActiveSupport::Dependencies::Reference has been refactored to take direct
advantage of the new ClassCache.

* Backports Range#cover? as an alias for Range#include? in Ruby 1.8 [Diego Carrion, fxn]

* Added weeks_ago and prev_week to Date/DateTime/Time. [Rob Zolkos, fxn]
